--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=pltrungg03_test
 sonar.organization=pltrungg03
-sonar.java.binaries=built
+sonar.java.binaries=build
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=test
 #sonar.projectVersion=1.0
