--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=pltrungg03_test
 sonar.organization=pltrungg03
 sonar.java.binaries
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=test
-#sonar.projectVersion=1.0
+sonar.projectName=test
+sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
