--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,9 @@
 sonar.projectKey=pltrungg03_test
 sonar.organization=pltrungg03
-sonar.java.binaries
+sonar.java.binaries=build
 # This is the name and version displayed in the SonarCloud UI.
-sonar.projectName=test
-sonar.projectVersion=1.0
+#sonar.projectName=test
+#sonar.projectVersion=1.0
 
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
